--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,7 @@
 <h1>Hello, World: Our First HTML Class<h1/>
 <p>Abimbola is a boy</p>
+<h1>www.com</h1>
 
-
+<p>My name is Abimbola</p>
+<p>I am an aspiring web developer</p>
+<p>I don't love coding but I love solving problems and I am happy when I understand what I am doing, helping people</p>
