update index.html 2

--- a/src/index.html
+++ b/src/index.html
@@ -4,4 +4,4 @@
 
 <p>My name is Abimbola</p>
 <p>I am an aspiring web developer</p>
-<p>I don't love coding but I love solving problems and I am happy when I understand what I am doing, helping people</p>
+<p>I don't love coding but I love solving problems and I am happy when I understand what I am doing, helping people etc.</p>
