update index.html 3

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
-<h1>Hello, World: Our First HTML Class<h1/>
-<p>Abimbola is a boy</p>
-<h1>www.com</h1>
-
-<p>My name is Abimbola</p>
-<p>I am an aspiring web developer</p>
-<p>I don't love coding but I love solving problems and I am happy when I understand what I am doing, helping people etc.</p>
+<img src="/src/Assets/Abimbola Ebenezer Media.jpg"/>
+<h1>Abimbola Ebenezer</h1>
+<p>Welcome to my personal webpage! <br>
+    I am Abimbola Ebenezer, a passionate developer and tech enthusiast. 
+    <br> Here, you can find information about my projects, skills, and contact details. 
+    <br> Feel free to explore and reach out if you'd like to connect!</p>
+<h2>About Me</h2>
+<p>I am an aspiring web developer who loves solving problems and helping people. 
+    I enjoy understanding what I am doing and finding solutions to challenges.</p>
