update index.html 4

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,16 @@
-<img src="/src/Assets/Abimbola Ebenezer Media.jpg"/>
-<h1>Abimbola Ebenezer</h1>
-<p>Welcome to my personal webpage! <br>
-    I am Abimbola Ebenezer, a passionate developer and tech enthusiast. 
-    <br> Here, you can find information about my projects, skills, and contact details. 
-    <br> Feel free to explore and reach out if you'd like to connect!</p>
-<h2>About Me</h2>
-<p>I am an aspiring web developer who loves solving problems and helping people. 
-    I enjoy understanding what I am doing and finding solutions to challenges.</p>
+<html>
+    <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> -->
+    <!-- <meta charset="utf-8"> -->
+    <head>
+    <title>My First HTML Practice Page</title>
+  </head>
+  <body>
+<h1>Hello, World: My First App</h1>
+<h3>Our First HTML Class</h3>
+<p>Welcome to the First HTML Class. <br> 
+    This is my first HTML practice page. I am learning how to create web pages using HTML. 
+    <br>HTML stands for HyperText Markup Language and is the standard language for creating web pages. 
+    <br>I am excited to learn more about HTML and web development!
+    <br>This is being typed manually from the VSC with git-bash terminal command to add, commit, push and status</p>
+  </body>
+</html>
