update index.html 5

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> -->
-    <!-- <meta charset="utf-8"> -->
+    <meta charset="utf-8">
     <head>
     <title>My First HTML Practice Page</title>
   </head>
