update index.html 6

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
-<html>
-    <!-- <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> -->
-    <meta charset="utf-8">
-    <head>
-    <title>My First HTML Practice Page</title>
-  </head>
-  <body>
-<h1>Hello, World: My First App</h1>
-<h3>Our First HTML Class</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document: My First HTML Practice</title>
+</head>
+<body>
+<h1>Hello, World! My First App</h1>
 <p>Welcome to the First HTML Class. <br> 
-    This is my first HTML practice page. I am learning how to create web pages using HTML. 
-    <br>HTML stands for HyperText Markup Language and is the standard language for creating web pages. 
-    <br>I am excited to learn more about HTML and web development!
-    <br>This is being typed manually from the VSC with git-bash terminal command to add, commit, push and status</p>
-  </body>
+    This is my first practice with HTML.</p>
+
+    <><img src="https://via.placeholder.com/150" alt="Placeholder Image">
+    <!-- <><img src="/src/Assets/Abimbola Ebenezer Media.jpg" alt="Abimbola Ebenezer's Image at his late dad's burial in August 2025"> -->
+</body>
 </html>
