update index.html 7

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <p>Welcome to the First HTML Class. <br> 
     This is my first practice with HTML.</p>
 
-    <><img src="https://via.placeholder.com/150" alt="Placeholder Image">
-    <!-- <><img src="/src/Assets/Abimbola Ebenezer Media.jpg" alt="Abimbola Ebenezer's Image at his late dad's burial in August 2025"> -->
+    <!-- <><img src="https://via.placeholder.com/150" alt="Placeholder Image"> -->
+    <><img src="/src/Assets/Abimbola Ebenezer Media.jpg" alt="Abimbola Ebenezer's Image at his late dad's burial in August 2025">
 </body>
 </html>
