--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,36 @@
     <title>Document: My First HTML Practice</title>
 </head>
 <body>
-<h1>Hello, World! My First App</h1>
-<p>Welcome to the First HTML Class. <br> 
-    This is my first practice with HTML.</p>
+<h1>Hello, World!</h1>
+<h2>My Christmas Shopping List</h2>
+<p>Welcome. This list contains all the things 
+    that Omolola babe need for a perfect Christmas Celebration.
+    The items needed include:<br>
+    <h3>Clothing items</h3>
+    <ul>
+        <li>3 pair of high heel shoes</li>
+        <li>A singlet and sexy panties for me</li>
+        <li>4 jeans trousers</li>
+        <li>5 Office <T-shirt>T-shirt</T-shirt></li>
+        <li>3 Gowns</li>
+        <li>2 Skirts</li>
+        <li>5 Bras</li>
+    </ul>
+    <h3>Food items</h3>
+        <ol>
+            <li>Bag of Rice</li>
+            <li>A Chicken for me</li>
+            <li>5 Chicken for guests</li>
+            <li>Snacks</li>
+            <li>Drinks</li>
+            <li>50L of Oil</li>
+            <li>Miscellaneous</li>  
+        </ol>
+    This is my first practice with HTML but this time around on List HTML, 
+    with a difference between ul for unordered list that use bullet point
+    and ordered list that use numbering.<br>
+Except for manually typing to select image, tag h name, and List, 
+this was automatically generated with Shift key + 1 + enter.</p>
 
     <!-- <><img src="https://via.placeholder.com/150" alt="Placeholder Image"> -->
     <><img src="/src/Assets/Abimbola Ebenezer Media.jpg" alt="Abimbola Ebenezer's Image at his late dad's burial in August 2025">
