--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,14 @@
 <p>Welcome. This list contains all the things 
     that Omolola babe need for a perfect Christmas Celebration.
     The items needed include:<br>
-    <h3>Clothing items</h3>
+    <h3>Items</h3>
     <ul>
-        <li>3 pair of high heel shoes</li>
-        <li>A singlet and sexy panties for me</li>
-        <li>4 jeans trousers</li>
-        <li>5 Office <T-shirt>T-shirt</T-shirt></li>
-        <li>3 Gowns</li>
-        <li>2 Skirts</li>
-        <li>5 Bras</li>
+      <a href="/src/HTML/Clothing-items.html"<li>Clothing items</li></a> <br>
+      <a href="/src/HTML/Food-items.html"<li>Food items</li></a> 
     </ul>
     <h3>Food items</h3>
         <ol>
-            <li>Bag of Rice</li>
-            <li>A Chicken for me</li>
-            <li>5 Chicken for guests</li>
-            <li>Snacks</li>
-            <li>Drinks</li>
-            <li>50L of Oil</li>
-            <li>Miscellaneous</li>  
+            <!-- <a href="/src/HTML/Food-items.html">Food Items</a> -->
         </ol>
     This is my first practice with HTML but this time around on List HTML, 
     with a difference between ul for unordered list that use bullet point
