--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,14 @@
 <p>Welcome. This list contains all the things 
     that Omolola babe need for a perfect Christmas Celebration.
     The items needed include:<br>
-    <h3>Items</h3>
+    <h3>Clothing items</h3>
     <ul>
-      <a href="/src/HTML/Clothing-items.html"<li>Clothing items</li></a> <br>
-      <a href="/src/HTML/Food-items.html"<li>Food items</li></a> 
+      <a href="/src/HTML/Clothing-items.html"<li>Clothing items</li></a>
+       
     </ul>
     <h3>Food items</h3>
         <ol>
+            <a href="/src/HTML/Food-items.html"<li>Food items</li></a>
             <!-- <a href="/src/HTML/Food-items.html">Food Items</a> -->
         </ol>
     This is my first practice with HTML but this time around on List HTML, 
