update index.html 11

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,13 @@
     The items needed include:<br>
     <h3>Clothing items</h3>
     <ul>
-      <a href="/src/HTML/Clothing-items.html"<li>Clothing items</li></a>
+      <a href="/src/HTML/Clothing-items.html"target="_blank"><li>Clothing items</li></a>
        
     </ul>
     <h3>Food items</h3>
         <ol>
-            <a href="/src/HTML/Food-items.html"<li>Food items</li></a>
+            <a href="/src/HTML/Food-items.html"target="_blank"</a><li>Food items</li></a> 
+            <!-- // rel="noopener noreferrer"> - to be paced after target =blank->
             <!-- <a href="/src/HTML/Food-items.html">Food Items</a> -->
         </ol>
     This is my first practice with HTML but this time around on List HTML, 
